<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceScreen
		android:fragment="org.wastaken.kotatsu.api21.settings.AppearanceSettingsFragment"
		android:icon="@drawable/ic_appearance"
		android:key="appearance"
		android:title="@string/appearance" />

	<PreferenceScreen
		android:fragment="org.wastaken.kotatsu.api21.settings.sources.SourcesSettingsFragment"
		android:icon="@drawable/ic_manga_source"
		android:key="remote_sources"
		android:title="@string/remote_sources" />

	<PreferenceScreen
		android:fragment="org.wastaken.kotatsu.api21.settings.ReaderSettingsFragment"
		android:icon="@drawable/ic_book_page"
		android:key="reader"
		android:title="@string/reader_settings" />

	<PreferenceScreen
		android:fragment="org.wastaken.kotatsu.api21.settings.MediaPlayerSettingsFragment"
		android:icon="@drawable/ic_play"
		android:key="media_player"
		android:title="@string/media_player_settings" />

	<PreferenceScreen
		android:fragment="org.wastaken.kotatsu.api21.settings.NetworkSettingsFragment"
		android:icon="@drawable/ic_web"
		android:key="network"
		android:title="@string/network" />

	<PreferenceScreen
		android:fragment="org.wastaken.kotatsu.api21.settings.userdata.UserDataSettingsFragment"
		android:icon="@drawable/ic_data_privacy"
		android:key="userdata"
		android:title="@string/data_and_privacy" />

	<PreferenceScreen
		android:fragment="org.wastaken.kotatsu.api21.settings.DownloadsSettingsFragment"
		android:icon="@drawable/ic_download"
		android:key="downloads"
		android:title="@string/downloads" />

	<PreferenceScreen
		android:fragment="org.wastaken.kotatsu.api21.settings.tracker.TrackerSettingsFragment"
		android:icon="@drawable/ic_feed"
		android:key="tracker"
		android:title="@string/check_for_new_chapters" />

	<PreferenceScreen
		android:fragment="org.wastaken.kotatsu.api21.settings.ServicesSettingsFragment"
		android:icon="@drawable/ic_services"
		android:key="services"
		android:title="@string/services" />

	<PreferenceScreen
		android:fragment="org.wastaken.kotatsu.api21.settings.about.AboutSettingsFragment"
		android:icon="@drawable/ic_info_outline"
		android:key="about"
		android:title="@string/about" />

</PreferenceScreen>
