<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="12dp"
		android:hint="@string/media_sources_search_hint">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/searchInput"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="text" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/buttonReset"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="12dp"
		android:text="@string/media_sources_reset" />

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/recyclerView"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

		<TextView
			android:id="@+id/textEmpty"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/media_sources_empty"
			android:visibility="gone" />

	</FrameLayout>

</LinearLayout>
